--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -43,7 +43,8 @@ body {
 .form-group {
     width: 35vw;
     height: 50vh;
-    box-shadow: 5px 10px #888888;
+    box-shadow: 10px 10px 5px 0px rgba(191,184,191,1);
+    margin-top: 25px;
 }
 
 .col-1 {
@@ -53,6 +54,11 @@ body {
 
 }
 
+input[type=text] {
+    border-style: none;
+    border-bottom: 1px solid #888888;
+    margin-bottom: 15px;
+}
 label {
     height: 100%;
     width: 30%;
