--- a/css/style-main.css
+++ b/css/style-main.css
@@ -25,7 +25,7 @@ body {
 header {
     display: flex;
     flex-direction: row;
-    height: 20vh;
+    height: 5vh;
     width: 100%;
     justify-content: center;
     margin-top: 10px;
@@ -40,6 +40,7 @@ header {
     align-content: center;
     justify-content: center;
     display: flex;
+    font-size: 2em;
     
     
 }
@@ -54,6 +55,7 @@ header {
     flex-direction: column;
     width: 45vw;
     height: 35vh;
+    margin-top: 10%;
     border: 1px solid black;
     box-shadow: 0 2px 15px 2px #000000;
     justify-content: center;
@@ -94,9 +96,11 @@ label {
 
 .input-matricula {
     border-style: none;
+    align-self: center;
     border-bottom: 1px solid #ccc;
-    border-radius: 10px;
-    width: 160px;
+    border-top: 1px solid #ccc;
+    width: 260px;
+    height: 25px;
 }
 .box-btn {
     width: 100%;
@@ -117,7 +121,7 @@ label {
   color:white;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  background: #bdc3c7;
+  background: #2196F3;
   border: 0;
   border-bottom: 2px solid #acb2b7;
   cursor: pointer;
@@ -130,6 +134,17 @@ label {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+.input-matricula::-webkit-input-placeholder{
+    text-align: center;
+    text-transform: uppercase;
+    font-style: bold;
+}
+.input-matricula::-moz-placeholder {
+    text-transform: uppercase;
+    text-align: center;
+    font-style: bold;
+}​
 
 
 
